Complete Interactive GUI and Documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyserial>=3.5",
     "numpy>=1.21.0",
     "pyyaml>=6.0",
+    "matplotlib>=3.3.0",
 ]
 
 [project.optional-dependencies]
